force-app/main/default/objects/ProvidedLedger__c/ProvidedLedger__c.object-meta.xml
<CustomObject>
    <label>支給台帳</label>
    <nameField>
        <displayFormat>S-{00000}</displayFormat>
        <label>支給番号</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>