force-app/main/default/objects/ProvidedLedger__c/fields/Disaster__c.field-meta.xml
<CustomField>
    <fullName>Disaster__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>災害名</label>
    <referenceTo>Disaster__c</referenceTo>
    <relationshipLabel>支給番号</relationshipLabel>
    <relationshipName>ProvidedLedgers</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>