force-app/main/default/objects/ProvidedLedger__c/fields/FullName__c.field-meta.xml
<CustomField>
    <fullName>FullName__c</fullName>
    <label>指名</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>