force-app/main/default/objects/ProvidedLedger__c/fields/ProvidedDate__c.field-meta.xml
<CustomField>
    <fullName>ProvidedDate__c</fullName>
    <label>支給日</label>
    <required>true</required>
    <type>Date</type>
</CustomField>