force-app/main/default/objects/ProvidedLedger__c/fields/ReceiptDate__c.field-meta.xml
<CustomField>
    <fullName>ReceiptDate__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>収受日</label>
    <required>true</required>
    <type>Date</type>
</CustomField>