force-app/main/default/objects/ProvidedLedger__c/fields/ReceiptJournal__c.field-meta.xml
<CustomField>
    <fullName>ReceiptJournal__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>収受番号</label>
    <referenceTo>ReceiptJournal__c</referenceTo>
    <relationshipLabel>支給番号</relationshipLabel>
    <relationshipName>ProvidedLedgers</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>