force-app/main/default/objects/ProvidedLedger__c/fields/Ruby__c.field-meta.xml
<CustomField>
    <fullName>Ruby__c</fullName>
    <label>ふりがな</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>